# mixmini

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  recipe_routes.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 4d30990f86e6_initial_schema.py
app/: auth.py  database.py  main.py  models.py
app/static/css/: app.css
app/templates/: base.html  catalog.html  index.html  inventory.html  login.html  register.html
app/templates/partials/: paint_card.html  paint_search_results.html
app/templates/recipes/: detail.html  edit.html  list.html  new.html
scripts/: seed_paints.py
tests/: test_auth.py  test_health.py
