[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mixmini"
version = "0.1.0"
description = "Miniature Paint Inventory & Recipe Manager"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "jinja2>=3.1.3",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "python-multipart>=0.0.9",
    "aiofiles>=23.2.1",
    "fastapi-users[sqlalchemy]>=12.1.0",
    "bcrypt>=4.0.0",
    "email-validator>=2.0.0",
    "itsdangerous>=2.1.0",
    "aiosqlite>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
